cmake_minimum_required(VERSION 3.10)
project(racing_car)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

if(OPT EQUAL "1")
    set(SOURCE_FILES src/RacingCar.cpp)
    set(FINAL_NAME "racing_car")
elseif(OPT EQUAL "2")
    set(SOURCE_FILES src/RacingCarFuncAdd.cpp)
	set(FINAL_NAME "racing_car")
elseif(OPT EQUAL "3")
    set(SOURCE_FILES src/RacingCarOuterFunc.cpp)
	set(FINAL_NAME "racing_car")
elseif(OPT EQUAL "4")
    set(SOURCE_FILES src/Car.cpp src/Car.h src/RacingMain.cpp)
	set(FINAL_NAME "racing_car")
elseif(OPT EQUAL "5")
#    set(SOURCE_FILES src/FruitSeller.h src/FruitSeller.cpp src/FruitBuyer.h src/FruitBuyer.cpp src/FruitMain.cpp)
	set(SOURCE_FILES src/FruitSaleSim1.cpp)
	set(FINAL_NAME "fruit")
endif()

add_executable(${FINAL_NAME} ${SOURCE_FILES})
